# lite-sync

./: Cargo.toml  README.md  README_CN.md
benches/: channel_benchmark.rs  notify_benchmark.rs  oneshot_generic_benchmark.rs  oneshot_lite_benchmark.rs  spsc_benchmark.rs
src/: atomic_waker.rs  lib.rs  notify.rs  oneshot.rs  request_response.rs  shim.rs  spsc.rs
src/oneshot/: common.rs  generic.rs  lite.rs
src/request_response/: common.rs  many_to_one.rs  one_to_one.rs
tests/: atomic_waker.rs  notify.rs  spsc.rs
tests/oneshot/: common.rs  lite.rs  mod.rs
